Force the star icon to highlight when using the keyboard shortcut for adding a bookmark.

Bug: 773979
Change-Id: I1a2bc9a86e898c3a91fcdfdc97296972dbdff723
Reviewed-on: https://chromium-review.googlesource.com/825627
Reviewed-by: Peter Kasting <pkasting@chromium.org>
Commit-Queue: Allen Bauer <kylixrd@chromium.org>
Cr-Commit-Position: refs/heads/master@{#524376}
Former-commit-id: 2ef3d9ac3f782e0a024704b8b9adf19e2643f70f